# pa2-pacman

./: 2  CMakeLists.txt  Doxyfile  LICENSE  README.md
examples/maps/: 1.pacmap  deadends.pacmap  large.pacmap  small.pacmap
maps/: 2.pacmap  3.pacmap
src/: CMakeLists.txt  Config.h  Coordinates.cpp  Coordinates.h  Difficulty.cpp  Difficulty.h  Direction.h  InputKey.h  LevelConfig.cpp  LevelConfig.h  Position.cpp  Position.h  UserConfig.cpp  UserConfig.h  Utils.cpp  Utils.h  main.cpp
src/Controller/: CMakeLists.txt  GameController.cpp  GameController.h
src/Model/: CMakeLists.txt  Config.cpp  Config.h  Game.cpp  Game.h  GameMap.cpp  GameMap.h  GameTimer.cpp  GameTimer.h
src/Model/GameObjects/: CMakeLists.txt  GameObject.cpp  GameObject.h  MovableObject.cpp  MovableObject.h  Player.cpp  Player.h
src/Model/GameObjects/Enemies/: CMakeLists.txt  Enemy.cpp  Enemy.h  Ghost.cpp  Ghost.h
src/Model/GameObjects/Enemies/Ghosts/: AggressiveGhost.cpp  AggressiveGhost.h  CMakeLists.txt  FreakGhost.cpp  FreakGhost.h  Ghost.cpp  Ghost.h  NormalGhost.cpp  NormalGhost.h
src/Model/GameObjects/Enemies/Navigators/: BfsNavigator.cpp  BfsNavigator.h  CMakeLists.txt  EscapeNavigator.cpp  EscapeNavigator.h  Navigator.cpp  Navigator.h  RandomNavigator.cpp  RandomNavigator.h
src/Model/GameObjects/Items/: CMakeLists.txt  Cherry.cpp  Cherry.h  Coin.cpp  Coin.h  Item.cpp  Item.h  PowerUp.cpp  PowerUp.h  ScoreBonus.cpp  ScoreBonus.h
src/View/: CMakeLists.txt  GameView.h
src/View/Ncurses/: CMakeLists.txt  Color.h  NcursesGameView.cpp  NcursesGameView.h  NcursesUI.cpp  NcursesUI.h  NcursesUtils.cpp  NcursesUtils.h  TextGraphics.h  ViewConfig.h
src/View/Ncurses/Screens/: HomeScreen.cpp  HomeScreen.h  Menu.cpp  Menu.h  Screen.cpp  Screen.h
src/Views/Ncurses/: GameWindow.cpp  GameWindow.h  NcursesUtils.cpp  NcursesUtils.h  NcursesView.cpp  NcursesView.h  ViewConfig.h
